feat : Create visual area txt

--- a/Gyeonggi/Desgin/index.html
+++ b/Gyeonggi/Desgin/index.html
@@ -51,11 +51,41 @@
     <!-- 비주얼 영역 -->
     <div class="visual">
         <div class="slider">
-            <div class="slide"><img src="img/3.jpg" alt=""></div>
-            <div class="slide"><img src="img/5.jpg" alt=""></div>
-            <div class="slide"><img src="img/20.jpg" alt=""></div>
-            <div class="slide"><img src="img/3.jpg" alt=""></div>
-            <div class="slide"><img src="img/5.jpg" alt=""></div>
+            <div class="slide">
+                <div class="slide_txt">
+                    <h1>아침이구나</h1>
+                    <p>날이 좋더라.</p>
+                </div>
+                <img src="img/3.jpg" alt="">
+            </div>
+            <div class="slide">
+                <div class="slide_txt">
+                    <h1>저녁이구나</h1>
+                    <p>꽃이 아름답더라.</p>
+                </div>
+                <img src="img/5.jpg" alt="">
+            </div>
+            <div class="slide">
+                <div class="slide_txt">
+                    <h1>해가 지는구나</h1>
+                    <p>그마저도 아름답더라.</p>
+                </div>
+                <img src="img/20.jpg" alt="">
+            </div>
+            <div class="slide">
+                <div class="slide_txt">
+                    <h1>아침이구나</h1>
+                    <p>날이 좋더라.</p>
+                </div>
+                <img src="img/3.jpg" alt="">
+            </div>
+            <div class="slide">
+                <div class="slide_txt">
+                    <h1>저녁이구나</h1>
+                    <p>꽃이 아름답더라.</p>
+                </div>
+                <img src="img/5.jpg" alt="">
+            </div>
         </div>
         <div class="slide_num">
             <p>3 <span>/ 3</span></p>
