--- a/Gyeonggi/Desgin/index.html
+++ b/Gyeonggi/Desgin/index.html
@@ -94,6 +94,58 @@
         </div>
     </div>
     <!-- 비주얼 영역 -->
+    <!-- 공지사항 영역 -->
+    <div class="notice_area">
+        <h1>공지사항</h1>
+        <div class="notice_box">
+            <input type="radio" name="notice" id="notice01" hidden checked>
+            <label for="notice01">문화</label>
+            <input type="radio" name="notice" id="notice02" hidden>
+            <label for="notice02">교육</label>
+            <input type="radio" name="notice" id="notice03" hidden>
+            <label for="notice03">체험</label>
 
+            <div class="notice notice01">
+                <div class="notice_content">
+                    <div>사랑만 남기는 문화들 <span>2024-05-02</span></div>
+                    <div>문화체험, 모든 것을 놀이 하듯이 <span>2024-04-19</span></div>
+                    <div>함께하면 더욱 즐거운 문화축제 <span>2024-03-15</span></div>
+                    <div>달빛과 함께 하는 문화축제 <span>2024-02-25</span></div>
+                    <div>다시 도약하는 전통, 함께 즐기는 문화 <span>2024-01-02</span></div>
+                </div>
+                <div class="notice_img">
+                    <img src="img/10.jpg" alt="" class="img_front">
+                    <img src="img/10.jpg" alt="" class="img_back">
+                </div>
+            </div>
+            <div class="notice notice02">
+                <div class="notice_content">
+                    <div>잊을 수 없는 역사, 그 날의 진실 <span>2024-04-24</span></div>
+                    <div>재밌게 배우는 문화활동 <span>2024-04-20</span></div>
+                    <div>더욱 생생하게, 현장체험실습 <span>2024-03-21</span></div>
+                    <div>한국에는 이런 문화까지 있다 <span>2024-02-29</span></div>
+                    <div>다시 시작하는 역사 돌아보기 <span>2024-01-30</span></div>
+                </div>
+                <div class="notice_img">
+                    <img src="img/13.jpg" alt="" class="img_front">
+                    <img src="img/13.jpg" alt="" class="img_back">
+                </div>
+            </div>
+            <div class="notice notice03">
+                <div class="notice_content">
+                    <div>이렇게 다양한 우리 문화들 <span>2024-04-29</span></div>
+                    <div>역사 속의 물건들 체험하기 <span>2024-03-25</span></div>
+                    <div>모든게 새로워진 달빛기행 축제 <span>2024-03-14</span></div>
+                    <div>100년전 그 날, 다시보는 과거 <span>2024-03-10</span></div>
+                    <div>새로운 여행, 또 다른 시작 <span>2024-01-31</span></div>
+                </div>
+                <div class="notice_img">
+                    <img src="img/7.jpg" alt="" class="img_front">
+                    <img src="img/7.jpg" alt="" class="img_back">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 공지사항 영역 -->
 </body>
 </html>
