feat : Create gall

--- a/Gyeonggi/Desgin/index.html
+++ b/Gyeonggi/Desgin/index.html
@@ -147,5 +147,24 @@
         </div>
     </div>
     <!-- 공지사항 영역 -->
+    <!-- 갤러리 영역 -->
+    <div class="gall_area">
+        <h1>갤러리</h1>
+        <div class="gall">
+            <div class="gall_img">
+                <img src="img/19.jpg" alt="">
+                <h1>새벽 달은 아름답구나.</h1>
+            </div>
+            <div class="gall_img">
+                <img src="img/25.jpg" alt="">
+                <h1>자라가 자라고 하는구나.</h1>
+            </div>
+            <div class="gall_img">
+                <img src="img/21.jpg" alt="">
+                <h1>나무아미타불 관세음보살.</h1>
+            </div>
+        </div>
+    </div>
+    <!-- 갤러리 영역 -->
 </body>
 </html>
