--- a/Gyeonggi/Desgin/sub02.html
+++ b/Gyeonggi/Desgin/sub02.html
@@ -48,7 +48,95 @@
         </header>
     </div>
     <!-- 헤더 영역 -->
-
+    <!-- 문화달력 페이지 -->
+    <div class="calender_area">
+        <div class="calender_box">
+            <div class="calender_content">
+                <div class="search_box">
+                    <input type="text" placeholder="search"> 
+                    <button>검색</button>
+                </div>
+                <div class="calender_btn">
+                    <button>월간</button>
+                    <button>주간</button>
+                    <button>일간</button>
+                    <select name="" id="">
+                        <option value="">전체</option>
+                        <option value="">행사</option>
+                        <option value="">체험</option>
+                    </select>
+                </div>
+                <div class="calender_card">
+                    <h1>현재 진행중인 체험</h1>
+                    <img src="img/8.jpg" alt="">
+                    <h3>문화유산 방문 캠페인 홍보관 여행자센터 TOURIST CENTER</h3>
+                    <p>기간 : 2024-01-01 ~ 2024-12-31</p>
+                    <p>장소 : 인천국제공항 제1여객터미널 교통센터 지하1층</p>
+                    <p>행사 구분 : 체험</p>
+                </div>
+            </div>
+            <div class="calender">
+                <h3>< 2024년 8월 ></h3>
+                <table>
+                    <tr>
+                        <th class="red">일</th>
+                        <th>월</th>
+                        <th>화</th>
+                        <th>수</th>
+                        <th>목</th>
+                        <th>금</th>
+                        <th class="blue">토</th>
+                    </tr>
+                    <tr>
+                        <td class="gray">28</td>
+                        <td>29</td>
+                        <td>30</td>
+                        <td>31</td>
+                        <td>1</td>
+                        <td>2</td>
+                        <td class="blue">3</td>
+                    </tr>
+                    <tr>
+                        <td class="red">4</td>
+                        <td>5</td>
+                        <td>6</td>
+                        <td>7</td>
+                        <td>8</td>
+                        <td>9</td>
+                        <td class="blue">10</td>
+                    </tr>
+                    <tr>
+                        <td class="red">11</td>
+                        <td>12</td>
+                        <td>13</td>
+                        <td>14</td>
+                        <td>15</td>
+                        <td>16</td>
+                        <td class="blue">17</td>
+                    </tr>
+                    <tr>
+                        <td class="red">18</td>
+                        <td>19</td>
+                        <td>20</td>
+                        <td>21</td>
+                        <td>22</td>
+                        <td>23</td>
+                        <td class="blue">24</td>
+                    </tr>
+                    <tr>
+                        <td class="red count25">25</td>
+                        <td>26</td>
+                        <td>27</td>
+                        <td>28</td>
+                        <td>29</td>
+                        <td>30</td>
+                        <td class="blue">31</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+    <!-- 문화달력 페이지 -->
     <!-- 푸터 영역 -->
     <div class="footer_area">
         <footer>
