--- a/Gyeonggi/Desgin/sub02.html
+++ b/Gyeonggi/Desgin/sub02.html
@@ -51,11 +51,7 @@
     <!-- 문화달력 페이지 -->
     <div class="calender_area">
         <div class="calender_box">
-            <div class="calender_content">
-                <div class="search_box">
-                    <input type="text" placeholder="search"> 
-                    <button>검색</button>
-                </div>
+            <div class="calender_search">
                 <div class="calender_btn">
                     <button>월간</button>
                     <button>주간</button>
@@ -66,73 +62,79 @@
                         <option value="">체험</option>
                     </select>
                 </div>
-                <div class="calender_card">
-                    <h1>현재 진행중인 체험</h1>
-                    <img src="img/8.jpg" alt="">
-                    <h3>문화유산 방문 캠페인 홍보관 여행자센터 TOURIST CENTER</h3>
-                    <p>기간 : 2024-01-01 ~ 2024-12-31</p>
-                    <p>장소 : 인천국제공항 제1여객터미널 교통센터 지하1층</p>
-                    <p>행사 구분 : 체험</p>
+                <div class="search_box">
+                    <input type="text" placeholder="search"> 
+                    <button>검색</button>
                 </div>
             </div>
-            <div class="calender">
-                <h3>< 2024년 8월 ></h3>
-                <table>
-                    <tr>
-                        <th class="red">일</th>
-                        <th>월</th>
-                        <th>화</th>
-                        <th>수</th>
-                        <th>목</th>
-                        <th>금</th>
-                        <th class="blue">토</th>
-                    </tr>
-                    <tr>
-                        <td class="gray">28</td>
-                        <td>29</td>
-                        <td>30</td>
-                        <td>31</td>
-                        <td>1</td>
-                        <td>2</td>
-                        <td class="blue">3</td>
-                    </tr>
-                    <tr>
-                        <td class="red">4</td>
-                        <td>5</td>
-                        <td>6</td>
-                        <td>7</td>
-                        <td>8</td>
-                        <td>9</td>
-                        <td class="blue">10</td>
-                    </tr>
-                    <tr>
-                        <td class="red">11</td>
-                        <td>12</td>
-                        <td>13</td>
-                        <td>14</td>
-                        <td>15</td>
-                        <td>16</td>
-                        <td class="blue">17</td>
-                    </tr>
-                    <tr>
-                        <td class="red">18</td>
-                        <td>19</td>
-                        <td>20</td>
-                        <td>21</td>
-                        <td>22</td>
-                        <td>23</td>
-                        <td class="blue">24</td>
-                    </tr>
-                    <tr>
-                        <td class="red count25">25</td>
-                        <td>26</td>
-                        <td>27</td>
-                        <td>28</td>
-                        <td>29</td>
-                        <td>30</td>
-                        <td class="blue">31</td>
-                    </tr>
-                </table>
+            <div class="calender_content">
+                <div class="calender_card">
+                    <h1>현재 진행중인 체험</h1>
+                    <img src="img/13.jpg" alt="">
+                    <h3>문화유산 방문 캠페인 홍보관 여행자센터 TOURIST CENTER</h3>
+                    <p><span>접수 기간</span> : 2024-01-01 ~ 2024-12-31</p>
+                    <p><span>행사 장소</span> : 인천국제공항 제1여객터미널 교통센터 지하1층</p>
+                    <p><span>행사 구분</span> : 체험</p>
+                </div>
+                <div class="calender">
+                    <h1>< 2024년 8월 ></h1>
+                    <table>
+                        <tr>
+                            <th class="red">일</th>
+                            <th>월</th>
+                            <th>화</th>
+                            <th>수</th>
+                            <th>목</th>
+                            <th>금</th>
+                            <th class="blue">토</th>
+                        </tr>
+                        <tr>
+                            <td class="gray">28</td>
+                            <td class="gray">29</td>
+                            <td class="gray">30</td>
+                            <td class="gray">31</td>
+                            <td>1</td>
+                            <td>2</td>
+                            <td class="blue">3</td>
+                        </tr>
+                        <tr>
+                            <td class="red">4</td>
+                            <td>5</td>
+                            <td>6</td>
+                            <td>7</td>
+                            <td>8</td>
+                            <td>9</td>
+                            <td class="blue">10</td>
+                        </tr>
+                        <tr>
+                            <td class="red">11</td>
+                            <td>12</td>
+                            <td>13</td>
+                            <td>14</td>
+                            <td class="red">15</td>
+                            <td>16</td>
+                            <td class="blue">17</td>
+                        </tr>
+                        <tr>
+                            <td class="red">18</td>
+                            <td>19</td>
+                            <td>20</td>
+                            <td>21</td>
+                            <td>22</td>
+                            <td>23</td>
+                            <td class="blue">24</td>
+                        </tr>
+                        <tr>
+                            <td class="red"><span class="d-day">25</span></td>
+                            <td>26</td>
+                            <td>27</td>
+                            <td>28</td>
+                            <td>29</td>
+                            <td>30</td>
+                            <td class="blue">31</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
