--- a/Gyeonggi/Desgin/sub01.html
+++ b/Gyeonggi/Desgin/sub01.html
@@ -65,16 +65,16 @@
         <div class="danger_content">
             <h1>이용수칙</h1>
             <div>
-                <p><span>1.</span> 코스 내에 있는 먹거리 외에 다른 먹거리(음료 및 생수등은 제외)는 가져오지 말아주세요.</p>
+                <p><span>1</span> 코스 내에 있는 먹거리 외에 다른 먹거리(음료 및 생수등은 제외)는 가져오지 말아주세요.</p>
             </div>
             <div>
-                <p><span>2.</span> 코스를 진행하는 도중 마음대로 이탈하지 말아주세요.</p>
+                <p><span>2</span> 코스를 진행하는 도중 마음대로 이탈하지 말아주세요.</p>
             </div>
             <div>
-                <p><span>3.</span> 코스를 시작하고 해설가가 설명해 주는 내용을 잘 들어주세요.</p>
+                <p><span>3</span> 코스를 시작하고 해설가가 설명해 주는 내용을 잘 들어주세요.</p>
             </div>
             <div>
-                <p><span>4.</span> 해설을 받을때는 해설가의 목소리가 잘 들릴 수 있도록 조용히 있어주세요.</p>
+                <p><span>4</span> 해설을 받을때는 해설가의 목소리가 잘 들릴 수 있도록 조용히 있어주세요.</p>
             </div>
         </div>
     </div>
