feat : Create up comming area

--- a/Gwangju/Desgin/index.html
+++ b/Gwangju/Desgin/index.html
@@ -55,5 +55,43 @@
     </div>
     <!-- 회원가입 모달 -->
     <!-- 헤더 영역 -->
+    <!-- Up comming 영역 -->
+    <div class="visual">
+        <div class="slider">
+            <div class="slide">
+                <div class="slide_txt">
+                    <h1>불꽃놀이 축제</h1>
+                    <p>장소 : 경주, 기간 : 2024-08-12 ~ 2024-08-14</p>
+                </div>
+                <button>내 여행일 정에 추가</button>
+                <img src="images/CK_cm26004928_l.jpg" alt="">
+            </div>
+            <div class="slide">
+                <div class="slide_txt">
+                    <h1>크리스마스</h1>
+                    <p>장소 : 천국, 기간 : 2024-12-25 ~ 2024-12-31</p>
+                </div>
+                <button>내 여행일 정에 추가</button>
+                <img src="images/CK_cm260016746_l.jpg" alt="">
+            </div>
+            <div class="slide">
+                <div class="slide_txt">
+                    <h1>오리보트 축제</h1>
+                    <p>장소 : 경주, 기간 : 2024-09-01 ~ 2024-10-31</p>
+                </div>
+                <button>내 여행일 정에 추가</button>
+                <img src="images/CK_tc00240010719_l.jpg" alt="">
+            </div>
+            <div class="slide">
+                <div class="slide_txt">
+                    <h1>불꽃놀이 축제</h1>
+                    <p>장소 : 경주, 기간 : 2024-08-12 ~ 2024-08-14</p>
+                </div>
+                <button>내 여행일 정에 추가</button>
+                <img src="images/CK_cm26004928_l.jpg" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- Up comming 영역 -->
 </body>
 </html>
