--- a/Gwangju/Desgin/index.html
+++ b/Gwangju/Desgin/index.html
@@ -13,12 +13,12 @@
     <div class="header_area">
         <header>
             <div class="logo">
-                <img src="logo2.png" alt="">
+                <a href="index.html"><img src="logo2.png" alt=""></a>
             </div>
             <nav>
                 <ul class="menu">
-                    <li><a href="#">Up comming 축제</a></li>
-                    <li><a href="#">Best 축제</a></li>
+                    <li><a href="#Upcomming">Up comming 축제</a></li>
+                    <li><a href="#bestFesta">Best 축제</a></li>
                     <li><a href="#">지역 별 축제</a></li>
                     <li><a href="#">이달의 축제</a></li>
                 </ul>
@@ -56,7 +56,7 @@
     <!-- 회원가입 모달 -->
     <!-- 헤더 영역 -->
     <!-- Up comming 영역 -->
-    <div class="visual">
+    <div class="visual" id="Upcomming">
         <div class="slider">
             <div class="slide">
                 <div class="slide_txt">
@@ -93,5 +93,110 @@
         </div>
     </div>
     <!-- Up comming 영역 -->
+    <!-- Best 축제 영역 -->
+    <input type="checkbox" id="festa">
+    <div class="best_festa_area" id="bestFesta">
+        <h1>Best 축제</h1>
+        <div class="best_festa">
+            <div class="festa_card">
+                <img src="images/CK_tc02730000863_l.jpg" alt="">
+                <div class="festa_txt">
+                    <p class="title"><span>2024 책읽는 한강공원</span> <span>좋아요 : 30개</span></p>
+                    <p>기간 : 2024-10-01 ~ 2024-10-04</p>
+                    <p>개최 장소 : 강서한강공원 여의도한강공원</p>
+                    <button><label for="festa">더보기</label></button>
+                </div>
+            </div>
+            <div class="festa_card">
+                <img src="images/CK_tc02290001711_l.jpg" alt="">
+                <div class="festa_txt">
+                    <p class="title"><span>서울페스타 2024</span> <span>좋아요 : 29개</span></p>
+                    <p>기간 : 2024-05-27 ~ 2024-05-29</p>
+                    <p>개최 장소 : 서울광장 광화문광장 등 서울 전역</p>
+                    <button>더보기</button>
+                </div>
+            </div>
+            <div class="festa_card">
+                <img src="images/CK_yaytg1739986_l.jpg" alt="">
+                <div class="festa_txt">
+                    <p class="title"><span>한강페스티벌</span> <span>좋아요 : 28개</span></p>
+                    <p>기간 : 2024-09-09 ~ 2024-09-12</p>
+                    <p>개최 장소 : 한강 수상 및 11개 한강공원 일대</p>
+                    <button>더보기</button>
+                </div>
+            </div>
+            <div class="festa_card">
+                <img src="images/CK_yaytg437359_l.jpg" alt="">
+                <div class="festa_txt">
+                    <p class="title"><span>서울뮤직페스티벌</span> <span>좋아요 : 27개</span></p>
+                    <p>기간 : 2024-10-19 ~ 2024-10-21</p>
+                    <p>개최 장소 : 노들섬</p>
+                    <button>더보기</button>
+                </div>
+            </div>
+            <div class="festa_card">
+                <img src="images/CK_yaytg1411834_l.jpg" alt="">
+                <div class="festa_txt">
+                    <p class="title"><span>2024 한강 불빛 공연(드론 라이트 쇼)</span> <span>좋아요 : 26개</span></p>
+                    <p>기간 : 2024-08-19 ~ 2024-0-21</p>
+                    <p>개최 장소 : 한강공원</p>
+                    <button>더보기</button>
+                </div>
+            </div>
+            <div class="festa_card">
+                <img src="images/CK_td02240014986_l.jpg" alt="">
+                <div class="festa_txt">
+                    <p class="title"><span>2024 서울세계도시문화축제</span> <span>좋아요 : 25개</span></p>
+                    <p>기간 : 2024-06-30 ~ 2024-07-03</p>
+                    <p>개최 장소 : 광화문광장 및 청계광장 일원</p>
+                    <button>더보기</button>
+                </div>
+            </div>
+            <div class="festa_card">
+                <img src="images/CK_cm08188656_l.jpg" alt="">
+                <div class="festa_txt">
+                    <p class="title"><span>서울드럼페스티벌</span> <span>좋아요 : 24개</span></p>
+                    <p>기간 : 2024-08-08 ~ 2024-08-11</p>
+                    <p>개최 장소 : 노들섬</p>
+                    <button>더보기</button>
+                </div>
+            </div>
+            <div class="festa_card">
+                <img src="images/CK_pc001023491_l.jpg" alt="">
+                <div class="festa_txt">
+                    <p class="title"><span>2024 추석 농수특산물 서울장터</span> <span>좋아요 : 23개</span></p>
+                    <p>기간 : 2024-02-01 ~ 2024-02-03</p>
+                    <p>개최 장소 : 서울광장</p>
+                    <button>더보기</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 축제 모달창 -->
+    <div class="festa_modal_back">
+        <div class="festa_modal">
+            <img src="images/CK_tc02730000863_l.jpg" alt="">
+            <div class="festa_modal_txt">
+                <label for="festa">닫기</label>
+                <h1>2024 책읽는 한강공원</h1>
+                <p>축제 기간 : 2024-10-01 ~ 2024-10-04</p>
+                <p>개최 장소 : 강서한강공원 여의도한강공원</p>
+                <p>축제 개최조직 : 해당없음</p>
+                <p>담당 지자체 : 서울시 미래한강본부</p>
+                <p>담당 부서 : 한강문화관광과</p>
+                <p>담당자 직책 : 주무관</p>
+                <p>담당자명 : 윤민재</p>
+                <p>담당자 연락처 : 02-6041-3189</p>
+                <p>2024년 방문객 정보 : <br> 내국인 수 : 246293, 외국인 수 : 0, 합계 : 246293</p>
+                <div>
+                    <button>좋아요</button>
+                    <button>싫어요</button>
+                    <button>내 여행 일정에 추가</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 축제 모달창 -->
+    <!-- Best 축제 영역 -->
 </body>
 </html>
