feat : Create footer

--- a/Gwangju/Desgin/index.html
+++ b/Gwangju/Desgin/index.html
@@ -264,6 +264,29 @@
         </div>
     </div>
     <!-- 축제 찾기 영역 -->
-    
+    <!-- 푸터 영역 -->
+    <div class="footer_area">
+        <footer>
+            <div class="logo">
+                <h1><a href="index.html">문화관광포털</a></h1>
+            </div>
+            <p>Copyright : (C)Korea Cultural Festival Potal 2024 All rights reserved.</p>
+            <div class="icon_area">
+                <div class="icon">
+                    <a href="#"><img src="icons/icon1.jpg" alt=""></a>
+                    <p>산삼 캐기 체험</p>
+                </div>
+                <div class="icon">
+                    <a href="#"><img src="icons/icon2.jpg" alt=""></a>
+                    <p>태권도 체험</p>
+                </div>
+                <div class="icon">
+                    <a href="#"><img src="icons/icon3.jpg" alt=""></a>
+                    <p>태극기 만들기 체험</p>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <!-- 푸터 영역 -->
 </body>
 </html>
