--- a/Gwangju/Desgin/index.html
+++ b/Gwangju/Desgin/index.html
@@ -19,7 +19,7 @@
                 <ul class="menu">
                     <li><a href="#Upcomming">Up comming 축제</a></li>
                     <li><a href="#bestFesta">Best 축제</a></li>
-                    <li><a href="#">지역 별 축제</a></li>
+                    <li><a href="#search">지역 별 축제</a></li>
                     <li><a href="#">이달의 축제</a></li>
                 </ul>
             </nav>
@@ -199,7 +199,7 @@
     <!-- 축제 모달창 -->
     <!-- Best 축제 영역 -->
     <!-- 축제 찾기 영역 -->
-    <div class="search_area">
+    <div class="search_area" id="search">
         <h1>축제 찾기</h1>
         <div class="search">
             <div class="search_box">
@@ -264,6 +264,69 @@
         </div>
     </div>
     <!-- 축제 찾기 영역 -->
+    <!-- 이달의 축제 영역 -->
+    <div class="calender_area">
+        <div class="calender">
+            <h1>< 2024 8월 ></h1>
+            <div class="table">
+                <ul>
+                    <li class="red">일</li>
+                    <li>월</li>
+                    <li>화</li>
+                    <li>수</li>
+                    <li>목</li>
+                    <li>금</li>
+                    <li class="blue">토</li>
+                </ul>
+                <ul>
+                    <li class="gray">28</li>
+                    <li class="gray">29</li>
+                    <li class="gray">30</li>
+                    <li class="gray">31</li>
+                    <li>1</li>
+                    <li>2</li>
+                    <li class="blue">3</li>
+                </ul>
+                <ul>
+                    <li class="red">4</li>
+                    <li>5</li>
+                    <li>6</li>
+                    <li>7</li>
+                    <li>8</li>
+                    <li>9</li>
+                    <li class="blue">10</li>
+                </ul>
+                <ul>
+                    <li class="red">11</li>
+                    <li>12</li>
+                    <li>13</li>
+                    <li>14</li>
+                    <li>15</li>
+                    <li>16</li>
+                    <li class="blue">17</li>
+                </ul>
+                <ul>
+                    <li class="red">18</li>
+                    <li>19</li>
+                    <li>20</li>
+                    <li>21</li>
+                    <li>22</li>
+                    <li>23</li>
+                    <li class="blue">24</li>
+                </ul>
+                <ul>
+                    <li class="red">25</li>
+                    <li>26</li>
+                    <li>27</li>
+                    <li>28</li>
+                    <li>29</li>
+                    <li>30</li>
+                    <li class="blue">31</li>
+                </ul>
+            </div>            
+        </div>
+    </div>
+    <!-- 이달의 축제 영역 -->
     <!-- 푸터 영역 -->
     <div class="footer_area">
         <footer>
