style : Update calender

--- a/Gwangju/Desgin/index.html
+++ b/Gwangju/Desgin/index.html
@@ -20,7 +20,7 @@
                     <li><a href="#Upcomming">Up comming 축제</a></li>
                     <li><a href="#bestFesta">Best 축제</a></li>
                     <li><a href="#search">지역 별 축제</a></li>
-                    <li><a href="#">이달의 축제</a></li>
+                    <li><a href="#calender">이달의 축제</a></li>
                 </ul>
             </nav>
             <div class="sgin_area">
@@ -265,9 +265,9 @@
     </div>
     <!-- 축제 찾기 영역 -->
     <!-- 이달의 축제 영역 -->
-    <div class="calender_area">
+    <div class="calender_area" id="calender">
         <div class="calender">
-            <h1>< 2024 8월 ></h1>
+            <h1><span><</span> 2024 8월 <span>></span></h1>
             <div class="table">
                 <ul>
                     <li class="red">일</li>
@@ -279,27 +279,27 @@
                     <li class="blue">토</li>
                 </ul>
                 <ul>
-                    <li class="gray">28</li>
-                    <li class="gray">29</li>
-                    <li class="gray">30</li>
-                    <li class="gray">31</li>
+                    <li class="gray"></li>
+                    <li class="gray"></li>
+                    <li class="gray"></li>
+                    <li class="gray"></li>
                     <li>1</li>
                     <li>2</li>
                     <li class="blue">3</li>
                 </ul>
                 <ul>
-                    <li class="red">4</li>
+                    <li class="red">4 <p>2024 서울대공원 벚꽃축제</p></li>
                     <li>5</li>
                     <li>6</li>
                     <li>7</li>
-                    <li>8</li>
-                    <li>9</li>
-                    <li class="blue">10</li>
+                    <li>8 <p>서울드럼페스티벌</p> <p>안양천 썸머 페스티벌</p></li>
+                    <li>9 </li>
+                    <li class="blue">10 <p>연제고분판타지축제</p></li>
                 </ul>
                 <ul>
                     <li class="red">11</li>
-                    <li>12</li>
-                    <li>13</li>
+                    <li>12 <p>제21회 마포음식문화축제</p></li>
+                    <li>13 <p>청룡문화제</p></li>
                     <li>14</li>
                     <li>15</li>
                     <li>16</li>
@@ -307,10 +307,10 @@
                 </ul>
                 <ul>
                     <li class="red">18</li>
-                    <li>19</li>
+                    <li>19 <p>2024 한강 불빛 공연(드론 라이트 쇼)</p> <p>제18회 영등포 여의도 봄꽃축제</p> <p>정동야행축제</p></li>
                     <li>20</li>
                     <li>21</li>
-                    <li>22</li>
+                    <li>22 <p>부산바다축제</p></li>
                     <li>23</li>
                     <li class="blue">24</li>
                 </ul>
@@ -318,10 +318,10 @@
                     <li class="red">25</li>
                     <li>26</li>
                     <li>27</li>
-                    <li>28</li>
+                    <li>28 <p>선유로운 축제</p></li>
                     <li>29</li>
                     <li>30</li>
-                    <li class="blue">31</li>
+                    <li class="blue">31 <p>2024 서리풀페스티벌</p></li>
                 </ul>
             </div>            
         </div>
