--- a/Gwangju/Desgin/index.html
+++ b/Gwangju/Desgin/index.html
@@ -102,8 +102,8 @@
                 <img src="images/CK_tc02730000863_l.jpg" alt="">
                 <div class="festa_txt">
                     <p class="title"><span>2024 책읽는 한강공원</span> <span>좋아요 : 30개</span></p>
-                    <p>기간 : 2024-10-01 ~ 2024-10-04</p>
-                    <p>개최 장소 : 강서한강공원 여의도한강공원</p>
+                    <p><span>기간 </span> : 2024-10-01 ~ 2024-10-04</p>
+                    <p><span>개최 장소</span> : 강서한강공원 여의도한강공원</p>
                     <button><label for="festa">더보기</label></button>
                 </div>
             </div>
@@ -111,8 +111,8 @@
                 <img src="images/CK_tc02290001711_l.jpg" alt="">
                 <div class="festa_txt">
                     <p class="title"><span>서울페스타 2024</span> <span>좋아요 : 29개</span></p>
-                    <p>기간 : 2024-05-27 ~ 2024-05-29</p>
-                    <p>개최 장소 : 서울광장 광화문광장 등 서울 전역</p>
+                    <p><span>기간</span> : 2024-05-27 ~ 2024-05-29</p>
+                    <p><span>개최 장소</span> : 서울광장 광화문광장 등 서울 전역</p>
                     <button>더보기</button>
                 </div>
             </div>
@@ -120,8 +120,8 @@
                 <img src="images/CK_yaytg1739986_l.jpg" alt="">
                 <div class="festa_txt">
                     <p class="title"><span>한강페스티벌</span> <span>좋아요 : 28개</span></p>
-                    <p>기간 : 2024-09-09 ~ 2024-09-12</p>
-                    <p>개최 장소 : 한강 수상 및 11개 한강공원 일대</p>
+                    <p><span>기간</span> : 2024-09-09 ~ 2024-09-12</p>
+                    <p><span>개최 장소</span> : 한강 수상 및 11개 한강공원 일대</p>
                     <button>더보기</button>
                 </div>
             </div>
@@ -129,8 +129,8 @@
                 <img src="images/CK_yaytg437359_l.jpg" alt="">
                 <div class="festa_txt">
                     <p class="title"><span>서울뮤직페스티벌</span> <span>좋아요 : 27개</span></p>
-                    <p>기간 : 2024-10-19 ~ 2024-10-21</p>
-                    <p>개최 장소 : 노들섬</p>
+                    <p><span>기간</span> : 2024-10-19 ~ 2024-10-21</p>
+                    <p><span>개최 장소</span> : 노들섬</p>
                     <button>더보기</button>
                 </div>
             </div>
@@ -138,8 +138,8 @@
                 <img src="images/CK_yaytg1411834_l.jpg" alt="">
                 <div class="festa_txt">
                     <p class="title"><span>2024 한강 불빛 공연(드론 라이트 쇼)</span> <span>좋아요 : 26개</span></p>
-                    <p>기간 : 2024-08-19 ~ 2024-0-21</p>
-                    <p>개최 장소 : 한강공원</p>
+                    <p><span>기간</span> : 2024-08-19 ~ 2024-0-21</p>
+                    <p><span>개최 장소</span> : 한강공원</p>
                     <button>더보기</button>
                 </div>
             </div>
@@ -147,8 +147,8 @@
                 <img src="images/CK_td02240014986_l.jpg" alt="">
                 <div class="festa_txt">
                     <p class="title"><span>2024 서울세계도시문화축제</span> <span>좋아요 : 25개</span></p>
-                    <p>기간 : 2024-06-30 ~ 2024-07-03</p>
-                    <p>개최 장소 : 광화문광장 및 청계광장 일원</p>
+                    <p><span>기간</span> : 2024-06-30 ~ 2024-07-03</p>
+                    <p><span>개최 장소</span> : 광화문광장 및 청계광장 일원</p>
                     <button>더보기</button>
                 </div>
             </div>
@@ -156,8 +156,8 @@
                 <img src="images/CK_cm08188656_l.jpg" alt="">
                 <div class="festa_txt">
                     <p class="title"><span>서울드럼페스티벌</span> <span>좋아요 : 24개</span></p>
-                    <p>기간 : 2024-08-08 ~ 2024-08-11</p>
-                    <p>개최 장소 : 노들섬</p>
+                    <p><span>기간</span> : 2024-08-08 ~ 2024-08-11</p>
+                    <p><span>개최 장소</span> : 노들섬</p>
                     <button>더보기</button>
                 </div>
             </div>
