--- a/Gyeonggi/Desgin/index.html
+++ b/Gyeonggi/Desgin/index.html
@@ -19,16 +19,16 @@
                     <li><a href="index.html">홈</a></li>
                     <li><a href="#">소개</a>
                         <ul class="sub_menu sub_menu01">
-                            <li><a href="sub01.html">- 달빛기행축제란</a></li>
-                            <li><a href="#">- 지역별 달빛기행축제 안내</a></li>
-                            <li><a href="#">- 코스소개</a></li>
+                            <li><a href="sub01.html">달빛기행축제란</a></li>
+                            <li><a href="#">지역별 달빛기행축제 안내</a></li>
+                            <li><a href="#">코스소개</a></li>
                         </ul>
                     </li>
                     <li><a href="#">참여/소식</a>
                         <ul class="sub_menu sub_menu02">
-                            <li><a href="#">- 공지사항</a></li>
-                            <li><a href="sub02.html">- 문화달력</a></li>
-                            <li><a href="#">- 퀴즈 이벤트 참가</a></li>
+                            <li><a href="#">공지사항</a></li>
+                            <li><a href="sub02.html">문화달력</a></li>
+                            <li><a href="#">퀴즈 이벤트 참가</a></li>
                         </ul>
                     </li>
                     <li><a href="#">예약하기</a></li>
@@ -149,19 +149,22 @@
     <!-- 공지사항 영역 -->
     <!-- 갤러리 영역 -->
     <div class="gall_area">
-        <h1>갤러리</h1>
+        <div class="gall_title"><img src="gallery2.png" alt=""></div>
         <div class="gall">
             <div class="gall_img">
-                <img src="img/19.jpg" alt="">
-                <h1>새벽 달은 아름답구나.</h1>
+                <img src="img/1.jpg" alt="">
+                <h1>봄이고</h1>
+                <i class="fa-solid fa-arrow-down"></i>
             </div>
             <div class="gall_img">
-                <img src="img/25.jpg" alt="">
-                <h1>자라가 자라고 하는구나.</h1>
+                <img src="img/60.jpg" alt="">
+                <h1>가을이고</h1>
+                <i class="fa-solid fa-arrow-down"></i>
             </div>
             <div class="gall_img">
-                <img src="img/21.jpg" alt="">
-                <h1>나무아미타불 관세음보살.</h1>
+                <img src="img/58.jpg" alt="">
+                <h1>겨울인데</h1>
+                <i class="fa-solid fa-arrow-up"></i>
             </div>
         </div>
     </div>
