--- a/Gyeonggi/Desgin/index.html
+++ b/Gyeonggi/Desgin/index.html
@@ -12,7 +12,7 @@
     <div class="header_area">
         <header>
             <div class="logo">
-                <img src="logo.png" alt="">
+                <img src="logo4.png" alt="">
             </div>
             <nav>
                 <ul class="main_menu">
@@ -54,35 +54,35 @@
             <div class="slide">
                 <div class="slide_txt">
                     <h1>아침이구나</h1>
-                    <p>날이 좋더라.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, odit impedit enim quod labore sequi esse, saepe quidem placeat eius recusandae ducimus expedita, minima similique! Mollitia nihil rerum dolores quod.</p>
                 </div>
                 <img src="img/3.jpg" alt="">
             </div>
             <div class="slide">
                 <div class="slide_txt">
                     <h1>저녁이구나</h1>
-                    <p>꽃이 아름답더라.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum dicta corporis perspiciatis maiores reprehenderit magni assumenda ipsum nostrum tenetur repellendus maxime ipsam expedita, nisi asperiores sit natus quia molestiae totam!</p>
                 </div>
                 <img src="img/5.jpg" alt="">
             </div>
             <div class="slide">
                 <div class="slide_txt">
                     <h1>해가 지는구나</h1>
-                    <p>그마저도 아름답더라.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime natus nemo asperiores minus rem voluptas, repellat in provident tempora aliquid, molestias a deserunt, adipisci exercitationem voluptatum quisquam porro. Facilis, velit.</p>
                 </div>
                 <img src="img/20.jpg" alt="">
             </div>
             <div class="slide">
                 <div class="slide_txt">
                     <h1>아침이구나</h1>
-                    <p>날이 좋더라.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, odit impedit enim quod labore sequi esse, saepe quidem placeat eius recusandae ducimus expedita, minima similique! Mollitia nihil rerum dolores quod.</p>
                 </div>
                 <img src="img/3.jpg" alt="">
             </div>
             <div class="slide">
                 <div class="slide_txt">
                     <h1>저녁이구나</h1>
-                    <p>꽃이 아름답더라.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum dicta corporis perspiciatis maiores reprehenderit magni assumenda ipsum nostrum tenetur repellendus maxime ipsam expedita, nisi asperiores sit natus quia molestiae totam!</p>
                 </div>
                 <img src="img/5.jpg" alt="">
             </div>
@@ -96,6 +96,14 @@
     <!-- 비주얼 영역 -->
     <!-- 공지사항 영역 -->
     <div class="notice_area">
+        <div class="bubble1"></div>
+        <div class="bubble2"></div>
+        <div class="bubble3"></div>
+        <div class="bubble4"></div>
+        <div class="bubble5"></div>
+        <div class="bubble6"></div>
+        <div class="bubble7"></div>
+        <div class="bubble8"></div>
         <h1>공지사항</h1>
         <div class="notice_box">
             <input type="radio" name="notice" id="notice01" hidden checked>
@@ -148,24 +156,20 @@
     </div>
     <!-- 공지사항 영역 -->
     <!-- 갤러리 영역 -->
-    <div class="gall_area">
-        <div class="gall_title"><img src="gallery4.png" alt=""></div>
-        <div class="gall">
-            <div class="gall_img">
-                <img src="img/1.jpg" alt="">
-                <h1>봄이고</h1>
-                <i class="fa-solid fa-arrow-down"></i>
-            </div>
-            <div class="gall_img">
-                <img src="img/60.jpg" alt="">
-                <h1>가을이고</h1>
-                <i class="fa-solid fa-arrow-down"></i>
-            </div>
-            <div class="gall_img">
-                <img src="img/58.jpg" alt="">
-                <h1>겨울인데</h1>
-                <i class="fa-solid fa-arrow-up"></i>
-            </div>
+    <div class="gall_container">
+        <div class="support-scrollsnap"></div>
+        <!-- <div class="gall_title"><img src="gallery.png" alt=""></div> -->
+        <div class="gall_area">
+            <img src="img/1.jpg" alt="">
+            <i class="fa-solid fa-arrow-down"></i>
+        </div>
+        <div class="gall_area">
+            <img src="img/60.jpg" alt="">
+            <i class="fa-solid fa-arrow-down"></i>
+        </div>
+        <div class="gall_area">
+            <img src="img/58.jpg" alt="">
+            <i class="fa-solid fa-arrow-up"></i>
         </div>
     </div>
     <!-- 갤러리 영역 -->
