--- a/Gyeonggi/Desgin/index.html
+++ b/Gyeonggi/Desgin/index.html
@@ -12,7 +12,7 @@
     <div class="header_area">
         <header>
             <div class="logo">
-                <img src="logo4.png" alt="">
+                <img src="img/logo/1x/대지 3.png" alt="">
             </div>
             <nav>
                 <ul class="main_menu">
