--- a/Gyeonggi/Desgin/index.html
+++ b/Gyeonggi/Desgin/index.html
@@ -12,7 +12,7 @@
     <div class="header_area">
         <header>
             <div class="logo">
-                <img src="img/logo/1x/대지 3.png" alt="">
+                <img src="대지 3.png" alt="">
             </div>
             <nav>
                 <ul class="main_menu">
@@ -37,11 +37,11 @@
             </nav>
             <div class="sgin_btn">
                 <div class="login_btn">
-                    <img src="fontawesome/svgs/solid/right-to-bracket.svg" alt="">
+                    <i class="fa-solid fa-right-to-bracket"></i>
                     <p>로그인</p>
                 </div>
                 <div class="join_btn">
-                    <img src="fontawesome/svgs/solid/user-plus.svg" alt="">
+                    <i class="fa-solid fa-user-plus"></i>
                     <p>회원가입</p>
                 </div>
             </div>
@@ -53,38 +53,38 @@
         <div class="slider">
             <div class="slide">
                 <div class="slide_txt">
-                    <h1>아침이구나</h1>
+                    <h1>VISUAL3</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, odit impedit enim quod labore sequi esse, saepe quidem placeat eius recusandae ducimus expedita, minima similique! Mollitia nihil rerum dolores quod.</p>
                 </div>
-                <img src="img/3.jpg" alt="">
+                <img src="visual4.png" alt="">
             </div>
             <div class="slide">
                 <div class="slide_txt">
-                    <h1>저녁이구나</h1>
+                    <h1>VISUAL1</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum dicta corporis perspiciatis maiores reprehenderit magni assumenda ipsum nostrum tenetur repellendus maxime ipsam expedita, nisi asperiores sit natus quia molestiae totam!</p>
                 </div>
-                <img src="img/5.jpg" alt="">
+                <img src="visual2.png" alt="">
             </div>
             <div class="slide">
                 <div class="slide_txt">
-                    <h1>해가 지는구나</h1>
+                    <h1>VISUAL2</h1>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime natus nemo asperiores minus rem voluptas, repellat in provident tempora aliquid, molestias a deserunt, adipisci exercitationem voluptatum quisquam porro. Facilis, velit.</p>
                 </div>
-                <img src="img/20.jpg" alt="">
+                <img src="visual3.png" alt="">
             </div>
             <div class="slide">
                 <div class="slide_txt">
-                    <h1>아침이구나</h1>
+                    <h1>VISUAL3</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, odit impedit enim quod labore sequi esse, saepe quidem placeat eius recusandae ducimus expedita, minima similique! Mollitia nihil rerum dolores quod.</p>
                 </div>
-                <img src="img/3.jpg" alt="">
+                <img src="visual4.png" alt="">
             </div>
             <div class="slide">
                 <div class="slide_txt">
-                    <h1>저녁이구나</h1>
+                    <h1>VISUAL1</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum dicta corporis perspiciatis maiores reprehenderit magni assumenda ipsum nostrum tenetur repellendus maxime ipsam expedita, nisi asperiores sit natus quia molestiae totam!</p>
                 </div>
-                <img src="img/5.jpg" alt="">
+                <img src="visual2.png" alt="">
             </div>
         </div>
         <div class="slide_num">
@@ -158,17 +158,19 @@
     <!-- 갤러리 영역 -->
     <div class="gall_container">
         <div class="support-scrollsnap"></div>
-        <!-- <div class="gall_title"><img src="gallery.png" alt=""></div> -->
         <div class="gall_area">
-            <img src="img/1.jpg" alt="">
+            <img src="img/38.jpg" alt="">
+            <div class="gall_title"><img src="gallery.png" alt=""></div>
             <i class="fa-solid fa-arrow-down"></i>
         </div>
         <div class="gall_area">
-            <img src="img/60.jpg" alt="">
+            <img src="img/39.jpg" alt="">
+            <div class="gall_title"><img src="gallery.png" alt=""></div>
             <i class="fa-solid fa-arrow-down"></i>
         </div>
         <div class="gall_area">
-            <img src="img/58.jpg" alt="">
+            <img src="img/40.jpg" alt="">
+            <div class="gall_title"><img src="gallery.png" alt=""></div>
             <i class="fa-solid fa-arrow-up"></i>
         </div>
     </div>
