--- a/Gyeonggi/Desgin/course.html
+++ b/Gyeonggi/Desgin/course.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>달빛기행축제</title>
-    <link rel="stylesheet" href="course.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <div class="header_area">
         <header>
             <div class="logo">
-                <img src="logo.png" alt="">
+                <img src="대지 3.png" alt="">
             </div>
             <nav>
                 <ul class="main_menu">
@@ -21,7 +21,7 @@
                         <ul class="sub_menu sub_menu01">
                             <li><a href="sub01.html">달빛기행축제란</a></li>
                             <li><a href="#">지역별 달빛기행축제 안내</a></li>
-                            <li><a href="#">코스소개</a></li>
+                            <li><a href="course.html">코스소개</a></li>
                         </ul>
                     </li>
                     <li><a href="#">참여/소식</a>
@@ -37,11 +37,11 @@
             </nav>
             <div class="sgin_btn">
                 <div class="login_btn">
-                    <img src="fontawesome/svgs/solid/right-to-bracket.svg" alt="">
+                    <i class="fa-solid fa-right-to-bracket"></i>
                     <p>로그인</p>
                 </div>
                 <div class="join_btn">
-                    <img src="fontawesome/svgs/solid/user-plus.svg" alt="">
+                    <i class="fa-solid fa-user-plus"></i>
                     <p>회원가입</p>
                 </div>
             </div>
@@ -102,9 +102,10 @@
     </div>
     <!-- 코스 소개 페이지 -->    
     <!-- 푸터 영역 -->
+    <!-- 푸터 영역 -->
     <div class="footer_area">
         <footer>
-            <div class="footer_logo">달빛기행축제</div>
+            <div class="footer_logo"><img src="대지 3.png" alt=""></div>
             <div class="copy">© Moonlight Travel Festival all rights reserved.</div>
             <div class="sns">
                 <i class="fa-brands fa-instagram"></i>
@@ -114,7 +115,6 @@
         </footer>
     </div>
     <!-- 푸터 영역 -->
-
     <script src="index.js"></script>
 </body>
 </html>
