--- a/Gyeonggi/Desgin/index.html
+++ b/Gyeonggi/Desgin/index.html
@@ -21,7 +21,7 @@
                         <ul class="sub_menu sub_menu01">
                             <li><a href="sub01.html">달빛기행축제란</a></li>
                             <li><a href="#">지역별 달빛기행축제 안내</a></li>
-                            <li><a href="#">코스소개</a></li>
+                            <li><a href="course.html">코스소개</a></li>
                         </ul>
                     </li>
                     <li><a href="#">참여/소식</a>
