docs : Add text

--- a/Gyeonggi/Desgin/index.html
+++ b/Gyeonggi/Desgin/index.html
@@ -96,6 +96,7 @@
     <!-- 비주얼 영역 -->
     <!-- 공지사항 영역 -->
     <div class="notice_area">
+        <!-- 물방울 -->
         <div class="bubble1"></div>
         <div class="bubble2"></div>
         <div class="bubble3"></div>
@@ -104,6 +105,7 @@
         <div class="bubble6"></div>
         <div class="bubble7"></div>
         <div class="bubble8"></div>
+        <!-- 물방울 -->
         <h1>공지사항</h1>
         <div class="notice_box">
             <input type="radio" name="notice" id="notice01" hidden checked>
