--- a/Gyeonggi/Desgin/event.html
+++ b/Gyeonggi/Desgin/event.html
@@ -115,7 +115,7 @@
                 <div class="map">
 
                     <canvas id="canvas"></canvas>
-                    <img src="img/창덕궁.png" alt="지도" title="지도" id="map-image">
+                    <img src="map/창덕궁.png" alt="지도" title="지도" id="map-image">
                     <img src="img/쿠폰.png" alt="쿠폰" title="쿠폰" id="coupon-image">
 
                     <div class="quiz-box">
