--- a/Gyeonggi/Desgin/sub01.html
+++ b/Gyeonggi/Desgin/sub01.html
@@ -28,7 +28,7 @@
                         <ul class="sub_menu sub_menu02">
                             <li><a href="#">공지사항</a></li>
                             <li><a href="sub02.html">문화달력</a></li>
-                            <li><a href="#">퀴즈 이벤트 참가</a></li>
+                            <li><a href="event.html">퀴즈 이벤트 참가</a></li>
                         </ul>
                     </li>
                     <li><a href="#">예약하기</a></li>
