test : Set file and js chore

--- a/Gyeonggi/Desgin/event.html
+++ b/Gyeonggi/Desgin/event.html
@@ -90,7 +90,7 @@
 
                     <canvas id="canvas"></canvas>
                     <img src="map/창덕궁.png" alt="지도" title="지도" id="map-image">
-                    <img src="img/쿠폰.png" alt="쿠폰" title="쿠폰" id="coupon-image">
+                    <img src="coupon/stamp_card.png" alt="쿠폰" title="쿠폰" id="coupon-image">
 
                     <div class="quiz-box">
                         <div>
