--- a/Gyeonggi/Desgin/event.html
+++ b/Gyeonggi/Desgin/event.html
@@ -113,6 +113,6 @@
 
     <input type="file" id="file-input" hidden>
 
-    <script src="event.js"></script>
+    <script src="seong.js"></script>
 </body>
 </html>
