--- a/Gyeonggi/test/index.html
+++ b/Gyeonggi/test/index.html
@@ -42,5 +42,17 @@
         </header>
     </div>
     <!-- 헤더 영역 -->
+
+    <!-- 비주얼 영역 -->
+    <div class="visual_area">
+        <div class="slider">
+            <div class="slide"><img src="visual1.png" alt=""></div>
+            <div class="slide"><img src="visual2.png" alt=""></div>
+            <div class="slide"><img src="visual3.png" alt=""></div>
+            <div class="slide"><img src="visual1.png" alt=""></div>
+            <div class="slide"><img src="visual2.png" alt=""></div>
+        </div>
+    </div>
+    <!-- 비주얼 영역 -->
 </body>
 </html>
