--- a/Gyeonggi/test/sub02.html
+++ b/Gyeonggi/test/sub02.html
@@ -11,7 +11,7 @@
     <!-- 헤더 영역 -->
     <div class="head_area">
         <header>
-            <a href="index.html">
+            <a href="sub02.html">
                 <div class="logo">
                     <img src="logo.png" alt="로고" title="로고">
                 </div>
@@ -53,7 +53,7 @@
     <!-- 푸터 영역 -->
     <div class="footer_area">
         <footer>
-            <a href="index.html">
+            <a href="sub02.html">
                 <div class="footer_logo">
                     <img src="logo.png" alt="로고" title="로고">
                 </div>
