feat : Update visual

--- a/Gyeonggi/test/index.html
+++ b/Gyeonggi/test/index.html
@@ -50,6 +50,52 @@
         </header>
     </div>
     <!-- 헤더 영역 -->
+    <!-- 비주얼 영역 -->
+    <div class="visual">
+        <div class="slider">
+            <div class="slide">
+                <img src="img/3.png" alt="">
+                <div class="textBox">
+                    <h1 class="h1">VISUAL3</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas quam nam deleniti aperiam consectetur sed fugiat, consequatur molestiae exercitationem omnis minima ut possimus error magni ratione quasi similique quos ab?</p>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="img/27.jpg" alt="">
+                <div class="textBox">
+                    <h1 class="h1">VISUAL1</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, excepturi dolorem! Aut magnam, reprehenderit praesentium exercitationem numquam quam excepturi, ut dolor illo harum quod non quasi, eligendi eaque eius consectetur.</p>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="img/43.jpg" alt="">
+                <div class="textBox">
+                    <h1 class="h1">VISUAL2</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere iusto sapiente, enim placeat quae labore, culpa eum numquam possimus reprehenderit vitae? Praesentium consequatur qui, voluptatum mollitia iste assumenda incidunt debitis.</p>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="img/3.png" alt="">
+                <div class="textBox">
+                    <h1 class="h1">VISUAL3</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas quam nam deleniti aperiam consectetur sed fugiat, consequatur molestiae exercitationem omnis minima ut possimus error magni ratione quasi similique quos ab?</p>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="img/27.jpg" alt="">
+                <div class="textBox">
+                    <h1 class="h1">VISUAL1</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, excepturi dolorem! Aut magnam, reprehenderit praesentium exercitationem numquam quam excepturi, ut dolor illo harum quod non quasi, eligendi eaque eius consectetur.</p>
+                </div>
+            </div>
+        </div>
+        <div class="num">
+            <p class="num1">1/3</p>
+            <p class="num2">2/3</p>
+            <p class="num3">3/3</p>
+        </div>
+    </div>
+    <!-- 비주얼 영역 -->
     <!-- 푸터 영역 -->
     <div class="footer_area">
         <footer>
