feat : Create notice

--- a/Gyeonggi/test/index.html
+++ b/Gyeonggi/test/index.html
@@ -54,35 +54,35 @@
     <div class="visual">
         <div class="slider">
             <div class="slide">
-                <img src="img/3.png" alt="">
+                <img src="img/3.png" alt="비주얼 이미지3" title="비주얼 이미지3">
                 <div class="textBox">
                     <h1 class="h1">VISUAL3</h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas quam nam deleniti aperiam consectetur sed fugiat, consequatur molestiae exercitationem omnis minima ut possimus error magni ratione quasi similique quos ab?</p>
                 </div>
             </div>
             <div class="slide">
-                <img src="img/27.jpg" alt="">
+                <img src="img/27.jpg" alt="비주얼 이미지1" title="비주얼 이미지1">
                 <div class="textBox">
                     <h1 class="h1">VISUAL1</h1>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, excepturi dolorem! Aut magnam, reprehenderit praesentium exercitationem numquam quam excepturi, ut dolor illo harum quod non quasi, eligendi eaque eius consectetur.</p>
                 </div>
             </div>
             <div class="slide">
-                <img src="img/43.jpg" alt="">
+                <img src="img/43.jpg" alt="비주얼 이미지2" title="비주얼 이미지2">
                 <div class="textBox">
                     <h1 class="h1">VISUAL2</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere iusto sapiente, enim placeat quae labore, culpa eum numquam possimus reprehenderit vitae? Praesentium consequatur qui, voluptatum mollitia iste assumenda incidunt debitis.</p>
                 </div>
             </div>
             <div class="slide">
-                <img src="img/3.png" alt="">
+                <img src="img/3.png" alt="비주얼 이미지3" title="비주얼 이미지3">
                 <div class="textBox">
                     <h1 class="h1">VISUAL3</h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas quam nam deleniti aperiam consectetur sed fugiat, consequatur molestiae exercitationem omnis minima ut possimus error magni ratione quasi similique quos ab?</p>
                 </div>
             </div>
             <div class="slide">
-                <img src="img/27.jpg" alt="">
+                <img src="img/27.jpg" alt="" alt="비주얼 이미지1" title="비주얼 이미지1">
                 <div class="textBox">
                     <h1 class="h1">VISUAL1</h1>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, excepturi dolorem! Aut magnam, reprehenderit praesentium exercitationem numquam quam excepturi, ut dolor illo harum quod non quasi, eligendi eaque eius consectetur.</p>
@@ -96,6 +96,61 @@
         </div>
     </div>
     <!-- 비주얼 영역 -->
+    <!-- 공지사항 영역 -->
+    <div class="notice_area">
+        <div class="notice">
+            <input type="radio" name="notice" id="notice01" hidden checked>
+            <label for="notice01">문화</label>
+            <input type="radio" name="notice" id="notice02" hidden>
+            <label for="notice02">교육</label>
+            <input type="radio" name="notice" id="notice03" hidden>
+            <label for="notice03">체험</label>
+            <div class="notice_box notice_box01">
+                <div class="notice_con">
+                    <div><p>사랑만 남기는 문화들</p> <span>2024-05-02</span></div>
+                    <div><p>문화체험, 모든 것을 놀이 하듯이</p> <span>2024-04-19</span></div>
+                    <div><p>함께하면 더욱 즐거운 문화축제</p> <span>2024-03-15</span></div>
+                    <div><p>달빛과 함께 하는 문화축제</p> <span>2024-02-25</span></div>
+                    <div><p>다시 도약하는 전통, 함께 즐기는 문화</p> <span>2024-01-02</span></div>
+                </div>
+                <div class="notice_img">
+                    <img src="img/21.jpg" class="img_front" alt="공지사항 문화 이미지" title="공지사항 문화 이미지">
+                    <img src="img/21.jpg" class="img_back" alt="공지사항 문화 이미지" title="공지사항 문화 이미지">
+                </div>
+            </div>
+            <div class="notice_box notice_box02">
+                <div class="notice_con">
+                    <div><p>잊을 수 없는 역사, 그 날의 진실</p> <span>2024-04-24</span></div>
+                    <div><p>재밌게 배우는 문화활동</p> <span>2024-04-20</span></div>
+                    <div><p>더욱 생생하게, 현장체험실습</p> <span>2024-03-21</span></div>
+                    <div><p>한국에는 이런 문화까지 있다</p> <span>2024-02-29</span></div>
+                    <div><p>다시 시작하는 역사 돌아보기</p> <span>2024-01-30</span></div>
+                </div>
+                <div class="notice_img">
+                    <div class="notice_img">
+                        <img src="img/23.jpg" class="img_front" alt="공지사항 교육 이미지" title="공지사항 교육 이미지">
+                        <img src="img/23.jpg" class="img_back" alt="공지사항 교육 이미지" title="공지사항 교육 이미지">
+                    </div>
+                </div>
+            </div>
+            <div class="notice_box notice_box03">
+                <div class="notice_con">
+                    <div><p>이렇게 다양한 우리 문화들</p> <span>2024-04-29</span></div>
+                    <div><p>역사 속의 물건들 체험하기</p> <span>2024-03-25</span></div>
+                    <div><p>모든게 새로워진 달빛기행 축제</p> <span>2024-03-14</span></div>
+                    <div><p>100년전 그 날, 다시보는 과거</p> <span>2024-03-10</span></div>
+                    <div><p>새로운 여행, 또 다른 시작</p> <span>2024-01-31</span></div>
+                </div>
+                <div class="notice_img">
+                    <div class="notice_img">
+                        <img src="img/29.png" class="img_front" alt="공지사항 체험 이미지" title="공지사항 체험 이미지">
+                        <img src="img/29.png" class="img_back" alt="공지사항 체험 이미지" title="공지사항 체험 이미지">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 공지사항 영역 -->
     <!-- 푸터 영역 -->
     <div class="footer_area">
         <footer>
