feat : Create gallery

--- a/Gyeonggi/test/index.html
+++ b/Gyeonggi/test/index.html
@@ -151,6 +151,26 @@
         </div>
     </div>
     <!-- 공지사항 영역 -->
+    <!-- 갤러리 영역 -->
+    <div class="gall_area">
+        <div></div>
+        <div class="gall">
+            <img src="img/38.jpg" class="gall_img" alt="갤러리 이미지1" title="갤러리 이미지1">
+            <img src="gallery.png" class="gall_txt" alt="갤러리 텍스트" title="갤러리 텍스트">
+            <p>↓</p>
+        </div>
+        <div class="gall">
+            <img src="img/39.jpg" class="gall_img" alt="갤러리 이미지2" title="갤러리 이미지2">
+            <img src="gallery.png" class="gall_txt" alt="갤러리 텍스트" title="갤러리 텍스트">
+            <p>↓</p>
+        </div>
+        <div class="gall">
+            <img src="img/40.jpg" class="gall_img" alt="갤러리 이미지3" title="갤러리 이미지3">
+            <img src="gallery.png" class="gall_txt" alt="갤러리 텍스트" title="갤러리 텍스트">
+            <p>↑</p>
+        </div>
+    </div>
+    <!-- 갤러리 영역 -->
     <!-- 푸터 영역 -->
     <div class="footer_area">
         <footer>
