--- a/Gyeonggi/test/index.html
+++ b/Gyeonggi/test/index.html
@@ -98,6 +98,14 @@
     <!-- 비주얼 영역 -->
     <!-- 공지사항 영역 -->
     <div class="notice_area">
+        <div class="bubble1"></div>
+        <div class="bubble2"></div>
+        <div class="bubble3"></div>
+        <div class="bubble4"></div>
+        <div class="bubble5"></div>
+        <div class="bubble6"></div>
+        <div class="bubble7"></div>
+        <div class="bubble8"></div>
         <div class="notice">
             <input type="radio" name="notice" id="notice01" hidden checked>
             <label for="notice01">문화</label>
