--- a/Daejeon_test/index.html
+++ b/Daejeon_test/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
@@ -92,5 +93,22 @@
     </div>
     <!-- 세로 네비게이션 -->
     <!-- 헤더 영역 -->
+    <!-- 비주얼 영역 -->
+    <div class="visual">
+        <input type="checkbox" id="stop">
+
+        <div class="slider">
+            <div class="slide" style="background-color: lightblue;"></div>
+            <div class="slide" style="background-color: lightyellow;"></div>
+            <div class="slide" style="background-color: lightgreen;"></div>
+            <div class="slide" style="background-color: lightblue;"></div>
+        </div>
+
+        <label for="stop" class="stop">
+            <i class="fa-solid fa-pause"></i>
+            <i class="fa-solid fa-play" id="play"></i>
+        </label>
+    </div>
+    <!-- 비주얼 영역 -->
 </body>
 </html>
