test : Test 3d gallery

--- a/Daejeon_test/index.html
+++ b/Daejeon_test/index.html
@@ -110,5 +110,30 @@
         </label>
     </div>
     <!-- 비주얼 영역 -->
+    <!-- 3D -->
+    <div class="gall_area">
+        <div class="gall">
+            <div class="box">
+                <div class="item item1" style="background-color: lightblue;"></div>
+                <div class="item item2" style="background-color: lightpink;"></div>
+                <div class="item item3" style="background-color: lightgreen;"></div>
+                <div class="item item4" style="background-color: lightgray;"></div>
+            </div>
+            <div class="box">
+                <div class="item item1" style="background-color: lightpink;"></div>
+                <div class="item item2" style="background-color: lightblue;"></div>
+                <div class="item item3" style="background-color: lightgray;"></div>
+                <div class="item item4" style="background-color: lightgreen;"></div>
+            </div>
+            <div class="box">
+                <div class="item item1" style="background-color: lightgray;"></div>
+                <div class="item item2" style="background-color: lightgreen;"></div>
+                <div class="item item3" style="background-color: lightpink;"></div>
+                <div class="item item4" style="background-color: lightblue;"></div>
+            </div>
+        </div>
+    </div>
+    <!-- 3D -->
+    
 </body>
 </html>
