test : Test width scroll box

--- a/Daejeon_test/index.html
+++ b/Daejeon_test/index.html
@@ -134,6 +134,21 @@
         </div>
     </div>
     <!-- 3D -->
-    
+    <!-- 가로스크롤 -->
+    <div class="width_area">
+        <div class="width">
+            <div class="wbox" style="background-color: lightblue;"></div>
+            <div class="wbox" style="background-color: lightcoral;"></div>
+            <div class="wbox" style="background-color: lightcyan;"></div>
+            <div class="wbox" style="background-color: lightgray;"></div>
+            <div class="wbox" style="background-color: lightgoldenrodyellow;"></div>
+            <div class="wbox" style="background-color: lightgreen;"></div>
+            <div class="wbox" style="background-color: lightpink;"></div>
+            <div class="wbox" style="background-color: lightsalmon;"></div>
+            <div class="wbox" style="background-color: lightseagreen;"></div>
+            <div class="wbox" style="background-color: lightskyblue;"></div>
+        </div>
+    </div>
+    <!-- 가로스크롤 -->
 </body>
 </html>
